--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
 </head>
 
 <body>
@@ -39,8 +40,8 @@
             <p class="price">R$ 4.000 </p>
             <div class="car">
                 <button>ADICIONAR À CESTA</button>
+        
         </div>
-    </div>
     </div>
 
     <script src="index.js"></script>
